2014-10-22  Barton E. Schaefer  <schaefer@zsh.org>

	* 33515: Src/Zle/compmatch.c: suppress parser error messages in
	comp_match()

	* 33493: Src/Builtins/rlimits.c, Src/exec.c: use correct command
	name in error messages about "ulimit" failure; restore internal
	copy of limits if setrlimit() fails, so the error won't repeat

2014-10-21  Oliver Kiddle  <opk@zsh.org>

	* 33486: Completion/X/Command/_rdesktop: new completion function

	* 33485: Completion/BSD/Command/_portsnap,
	Completion/Darwin/Command/_defaults,
	Completion/Darwin/Command/_fink, Completion/Debian/Command/_dchroot,
	Completion/Debian/Command/_dchroot-dsa,
	Completion/Debian/Command/_make-kpkg,
	Completion/Debian/Command/_update-alternatives,
	Completion/Debian/Command/_vim-addons, Completion/Unix/Command/_du,
	Completion/Unix/Command/_ecasound, Completion/Unix/Command/_ffmpeg,
	Completion/Unix/Command/_ln, Completion/Unix/Command/_mail,
	Completion/Unix/Command/_mosh, Completion/Unix/Command/_mysqldiff,
	Completion/Unix/Command/_od, Completion/Unix/Command/_pgrep,
	Completion/Unix/Command/_pydoc, Completion/Unix/Command/_ri,
	Completion/Unix/Command/_su, Completion/Zsh/Command/_tcpsys,
	Completion/Zsh/Command/_zattr: fixes for zstyle context handling

	* 33481: Completion/Mandriva/Command/_rebootin,
	Completion/Unix/Type/_directories, Completion/Unix/Type/_pdf,
	Completion/Unix/Type/_pids, Completion/openSUSE/Command/_yast,
	Completion/openSUSE/Command/_SUSEconfig: resolve completion
	clashes and tidy-up SUSE/Mandriva related functions

2014-10-17  Peter Stephenson  <p.stephenson@samsung.com>

	* see 33475: Completion/Unix/Command/_gcc: allow .cpp files as
	input.

2014-10-14  Oliver Kiddle  <opk@zsh.org>

	* 33455: Syohei YOSHIDA: Completion/Unix/Command/_global:
	update GNU global option completion

	* 33467: Completion/Debian/Command/_apt-move,
	Completion/Debian/Command/_bts, Completion/Linux/Command/_sysstat,
	Completion/Mandriva/Command/_urpmi, Completion/Redhat/Command/_rpm,