@@ -1,3 +1,8 @@
+2014-10-23  Oliver Kiddle  <opk@zsh.org>
+
+	* 33512: Src/Zle/zle.h, Src/Zle/zle_main.c, Src/Zle/zle_utils.c,
+	Src/Zle/zle_vi.c: add support for "0 vi buffer and yank to it
+
 2014-10-22  Barton E. Schaefer  <schaefer@zsh.org>
 
 	* 33515: Src/Zle/compmatch.c: suppress parser error messages in
